--- a/Plot/Sinopsis.html
+++ b/Plot/Sinopsis.html
@@ -12,22 +12,27 @@
     <center><h1>Premise</h1></center>
     <p>The series follows Elliot Alderson, a young man living in New York City, who works at the cyber security company Allsafe as a cybersecurity engineer. Constantly struggling with social anxiety, dissociative identity disorder and clinical depression, Elliot's thought process seems heavily influenced by paranoia and delusion. He connects to people by hacking them, which often leads him to act as a cyber-vigilante. He is recruited by a mysterious insurrectionary anarchist known as Mr. Robot and joins his team of hacktivists known as fsociety. One of their missions is to cancel all consumer debt by encrypting all the data of one of the largest corporations in the world, E Corp (which Elliot perceives as Evil Corp), which also happens to be Allsafe's biggest client.</p>
     <h2>Cast</h2>
-    <div>     
+    <div>
+        <ul>
         <h3>Main</h3>
-        <p>Rami Malek as <a href="/Characters/Main_Characters/Elliot.html">Elliot Alderson</a></p>
-        <p>Carly Chaikin as <a href="/Characters/Main_Characters/Darlene.html">Darlene Alderson</a></p>
-        <p>Portia Doubleday as <a href="/Characters/Main_Characters/Angela.html">Angela Moss</a></p>
-        <p>Martin Wallström as <a href="/Characters/Main_Characters/Tyrell.html">Tyrell Wellick</a></p>
-        <p>Christian Slater as <a href="/Characters/Main_Characters/Mr_Robot.html">Mr. Robot</a></p>
-        <p>Michael Cristofer as <a href="/Characters/Main_Characters/Phillip.html">Phillip Pricen</a></p>
-        <p>Grace Gummer as <a href="/Characters/Main_Characters/Dom.html">Dominique "Dom" DiPierro</a></p>
-        <p>BD Wong as <a href="/Characters/Main_Characters/Whiterose.html">Whiterose</a></p>
-        <p>Bobby Cannavale as <a href="/Characters/Main_Characters/Irving.html">Irving</a></p>
-        <p>Elliot Villar as <a href="/Characters/Main_Characters/Vera.html">Fernando Vera</a></p>
+        <li><p>Rami Malek as <a href="/Characters/Main_Characters/Elliot.html">Elliot Alderson</a></p></li>
+        <li><p>Carly Chaikin as <a href="/Characters/Main_Characters/Darlene.html">Darlene Alderson</a></p></li>
+        <li> <p>Portia Doubleday as <a href="/Characters/Main_Characters/Angela.html">Angela Moss</a></p></li>
+        <li><p>Martin Wallström as <a href="/Characters/Main_Characters/Tyrell.html">Tyrell Wellick</a></p></li>
+        <li> <p>Christian Slater as <a href="/Characters/Main_Characters/Mr_Robot.html">Mr. Robot</a></p></li>
+        <li><p>Michael Cristofer as <a href="/Characters/Main_Characters/Phillip.html">Phillip Pricen</a></p></li>
+        <li><p>Grace Gummer as <a href="/Characters/Main_Characters/Dom.html">Dominique "Dom" DiPierro</a></p></li>
+        <li><p>BD Wong as <a href="/Characters/Main_Characters/Whiterose.html">Whiterose</a></p></li>
+        <li><p>Bobby Cannavale as <a href="/Characters/Main_Characters/Irving.html">Irving</a></p></li>
+        <li><p>Elliot Villar as <a href="/Characters/Main_Characters/Vera.html">Fernando Vera</a><p></li>
+        </ul>
     </div>
     <br><br>
     <div>
-        <p>Gloria Reuben as <a href="/Characters/Recurring_Characters/Krista.html">Krista Gordon</p>
+        <h3>Recurring</h3>
+        <ul>
+        <li><p>Gloria Reuben as <a href="/Characters/Recurring_Characters/Krista.html">Krista Gordon</p></li>
+        </ul>
     </div>
     
 </body>
