--- a/Characters/Main_Characters/Darlene.html
+++ b/Characters/Main_Characters/Darlene.html
@@ -7,6 +7,7 @@
 </head>
 <div style="background-image: url('/img/wallpaper_log.jpg');"></div>
 <body  style="background-color:whitesmoke;">
+    <main>
     <center><h1>Darlene Alderson</h1>
     <img src="/img/darlene.JPG" width="320" height="425" alt=""></center>
     <section><br>
@@ -35,5 +36,6 @@ src="https://www.youtube.com/embed/H-zokSa32B8">
 <section>
     <p><a href="/Plot/Sinopsis.html"> Go back</a></p>
 </section>
+</main>
 </body>
 </html>
