--- a/Characters/Main_Characters/Mr_Robot.html
+++ b/Characters/Main_Characters/Mr_Robot.html
@@ -7,6 +7,7 @@
 </head>
 <div style="background-image: url('/img/wallpaper_log.jpg');"></div>
 <body  style="background-color:whitesmoke;">
+    <main>
     <center>
         <h1>Mr. Robot</h1>
     <img src="/img/mr_robot_jpg.JPG" width="320" height="425" alt=""></center>
@@ -37,5 +38,6 @@ src="https://www.youtube.com/embed/Xyzmv4390Z8">
 <section>
     <p><a href="/Plot/Sinopsis.html"> Go back</a></p>
 </section>
+</main>
 </body>
 </html>
