--- a/Characters/Main_Characters/Vera.html
+++ b/Characters/Main_Characters/Vera.html
@@ -7,6 +7,7 @@
 </head>
 <div style="background-image: url('/img/wallpaper_log.jpg');"></div>
 <body  style="background-color:whitesmoke;">
+    <main>
     <center>
         <h1>Fernando Vera</h1>
     <img src="/img/Vera.JPG" width="420" height="425" alt=""></center>
@@ -36,5 +37,6 @@ src="https://www.youtube.com/embed/Pp_k0ExiaFA">
 <section>
     <p><a href="/Plot/Sinopsis.html"> Go back</a></p>
 </section>
+</main>
 </body>
 </html>
