--- a/Characters/Recurring_Characters/Krista.html
+++ b/Characters/Recurring_Characters/Krista.html
@@ -7,11 +7,12 @@
 </head>
 <div style="background-image: url('/img/wallpaper_log.jpg');"></div>
 <body  style="background-color:whitesmoke;">
+    <main>
     <center><h1>Darlene Alderson</h1>
     <img src="/img/krista.JPG" width="420" height="425" alt=""></center>
     <section><br>
     <div>
-        <i>Communication is key, Elliot. Real human interaction. That's what's important for you right now.</i><br><br>
+    <i>Communication is key, Elliot. Real human interaction. That's what's important for you right now.</i><br><br>
     <p>Krista Gordon is Elliot's court-appointed therapist. She is played by Gloria Reuben.
 
     </p>
@@ -35,5 +36,6 @@ src="https://www.youtube.com/embed/u0lMpeYymZs">
 <section>
     <p><a href="/Plot/Sinopsis.html"> Go back</a></p>
 </section>
+</main>
 </body>
 </html>
