--- a/Plot/Sinopsis.html
+++ b/Plot/Sinopsis.html
@@ -6,6 +6,7 @@
     <title>Sinopsis</title>
 </head>
 <body>
+<main>
     <center>
     <img src="/img/cover.jpg" alt="cover">
     </center>
@@ -34,6 +35,6 @@
         <li><p>Gloria Reuben as <a href="/Characters/Recurring_Characters/Krista.html">Krista Gordon</p></li>
         </ul>
     </div>
-    
+</main>
 </body>
 </html>
