--- a/inicio.html
+++ b/inicio.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     </head>
-
+<main>
 <body>
     <div>
         <a href="Plot/Sinopsis.html"><img src="img/MrRobot.jpg" alt="Mr. Robot" /></a>     
     </div>
 </body> 
+</main>
 </html>
