--- a/Characters/Main_Characters/Dom.html
+++ b/Characters/Main_Characters/Dom.html
@@ -7,6 +7,7 @@
 </head>
 <div style="background-image: url('/img/wallpaper_log.jpg');"></div>
 <body  style="background-color:whitesmoke;">
+    <main>
     <center>
         <h1>Dominique DiPierro</h1>
     <img src="/img/dom.jpg" width="320" height="425" alt=""></center>
@@ -35,5 +36,6 @@ src="https://www.youtube.com/embed/-md3_qcwoY0">
 <section>
     <p><a href="/Plot/Sinopsis.html"> Go back</a></p>
 </section>
+</main>
 </body>
 </html>
