--- a/Characters/Main_Characters/Elliot.html
+++ b/Characters/Main_Characters/Elliot.html
@@ -7,6 +7,7 @@
 </head>
 <div style="background-image: url('/img/wallpaper_log.jpg');"></div>
 <body  style="background-color:lightgray;">
+    <main>
     <center><h1>Elliot Alderson</h1>
     <img src="/img/elliot_profile.jpg" alt=""></center>
     <section>
@@ -40,5 +41,6 @@ src="https://youtube.com/embed/gISE5ublbQA">
 <section>
     <p><a href="/Plot/Sinopsis.html"> Go back</a></p>
 </section>
+</main>
 </body>
 </html>
