--- a/Characters/Main_Characters/Irving.html
+++ b/Characters/Main_Characters/Irving.html
@@ -7,6 +7,7 @@
 </head>
 <div style="background-image: url('/img/wallpaper_log.jpg');"></div>
 <body  style="background-color:whitesmoke;">
+    <main>
     <center>
         <h1>Irving</h1>
     <img src="/img/Irving.jpg" width="420" height="425" alt=""></center>
@@ -31,6 +32,6 @@
 src="https://www.youtube.com/embed/hGL5Tvx4NX0">
 </iframe>
 </section>
-
+</main>
 </body>
 </html>
