--- a/Characters/Main_Characters/Whiterose.html
+++ b/Characters/Main_Characters/Whiterose.html
@@ -7,6 +7,7 @@
 </head>
 <div style="background-image: url('/img/wallpaper_log.jpg');"></div>
 <body  style="background-color:whitesmoke;">
+    <main>
     <center>
         <h1>WhiteRose</h1>
     <img src="/img/whiterose.JPG" width="320" height="425" alt=""></center>
@@ -36,5 +37,6 @@ src="https://www.youtube.com/embed/CzigxbJdh_c">
 <section>
     <p><a href="/Plot/Sinopsis.html"> Go back</a></p>
 </section>
+</main>
 </body>
 </html>
